--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,10 +24,10 @@ stages:
           targetPath: '$(Build.SourcesDirectory)'
           artifact: 'drop'
           publishLocation: 'pipeline'
-      - script: |
-          npm install
-          npm run build
-        displayName: 'npm install and build'
+      #- script: |
+      #    npm install
+      #    npm run build
+      #  displayName: 'npm install and build'
 
       # - script: |
       #     npm run test-juint
