--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ stages:
       - script: |
           npm install
           npm run build
+          npm run test
         displayName: 'npm install and build'
 
       # - script: |
