--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@payk/australia-address-parser",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Australia Address Parser is a regex-based street address and street intersection parser for Australia🇦🇺. It's basic goal is  parsing user-provided address strings into parts, thus identify the street type (that Google API is not providing).",
   "main": "parser.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/pay-k/australia-address-parser#readme",
   "dependencies": {
-    "xregexp": "^4.2.4"
+    "xregexp": "^3.2.0"
   }
 }
