--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,14 +20,14 @@ stages:
           versionSpec: '10.x'
         displayName: 'Install Node.js'
       - task: PublishPipelineArtifact@1
-          inputs:
-            targetPath: '$(Build.SourcesDirectory)'
-            artifact: 'drop'
-            publishLocation: 'pipeline'
+        inputs:
+          targetPath: '$(Build.SourcesDirectory)'
+          artifact: 'drop'
+          publishLocation: 'pipeline'
       - script: |
           npm install
-          npm run build
           npm run test
+        displayName: 'Test'
 
       # - script: |
       #     npm run test-juint
