--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@payk/australia-address-parser",
-  "version": "1.0.2",
+  "version": "1.0.1",
   "description": "Australia Address Parser is a regex-based street address and street intersection parser for Australia🇦🇺. It's basic goal is  parsing user-provided address strings into parts, thus identify the street type (that Google API is not providing).",
   "main": "parser.js",
   "scripts": {
-    "test": "node test"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
